# Advent-of-Code

./: .gitignore  create_next_day.py  pip-selfcheck.json  pylintrc  pyproject.toml  requirements.txt  style.bat
2018/01/: 1.py  2.py
2018/02/: 1.py  2.py
2019/01/: 1.py  2.py
2019/02/: 1.py  2.py
2019/03/: 1.py  2.py
2019/04/: 1.py  2.py
2019/05/: 1.py  2.py  input.txt
2019/06/: 1.py  2.py
aoc/shared/: __init__.py  grids.py  grouping.py  input.py  maths.py  points.py  strings.py
aoc/year_2015/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
aoc/year_2016/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  (+2 more)
shared/: __init__.py
year_2015/: day_01.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_10.py  day_11.py  day_12.py  day_14.py  day_16.py  day_17.py  day_18.py  day_20.py  day_21.py  day_23.py  day_24.py
year_2016/: day_02.py  day_03.py  day_04.py  day_07.py  day_08.py  day_09.py  day_10.py
year_2019/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  pathfinding.py  utility.py
year_2020/: day_01.py  day_02.py  day_03.py  day_04.py  day_06.py  day_09.py  day_11.py  day_12.py  day_15.py  day_20.py  day_23.py
year_2021/: day_01.py
(+119 files in other folders)
