[tool.poetry]
name = "aoc"
version = "0.0.1"
description = "Advent of Code"

license = "MIT"

authors = ["Dale Myers <dale@myers.io>"]

readme = 'README.md'

repository = "https://github.com/dalemyers/Advent-of-Code"
homepage = "https://github.com/dalemyers/Advent-of-Code"

keywords = ['advent', 'code', 'aoc']

[tool.poetry.dependencies]
python = "^3.13.0"
astar = "=0.9"
pillow = "^12.0"

[tool.poetry.dev-dependencies]
black = "=25.11.0"
mypy = "=1.19.0"
pylint = "=4.0.4"
pytest = "=9.0.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
